Spacing issues fixed in farms page

--- a/src/assets/scss/partials/_farms.module.scss
+++ b/src/assets/scss/partials/_farms.module.scss
@@ -8,8 +8,9 @@
   margin: 40px auto;
   padding: 0 20px;
   display: grid;
-  grid-template-columns: repeat(auto-fit, 320px);
+  grid-template-columns: repeat(auto-fit, 345px);
   grid-gap: 20px;
+  justify-content: center;
 }
 
 .plentyCard {
